# smarthome-api

./: .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.sample  pyproject.toml  sample.env
apps/sensor/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/sensor/management/commands/: import_sensors.py
apps/sensor/migrations/: 0001_initial.py
apps/sensor/tests/: conftest.py  factories.py  test_services.py  test_views.py
common/: pagination.py
config/: urls.py
config/settings/: base.py  development.py  production.py  test.py
data/: sensor_data.csv
